--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,10 @@ button[type="submit"] {
 #createAccount {
   margin-left: 4px;
 }
+
+.error {
+  font-size: 12px;
+  color: red;
+  margin: 0;
+  line-height: 0;
+}
