--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,18 @@
   min-width: 0;
 }
 
+html,
+body {
+  margin: 0;
+}
+
 body {
   font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     sans-serif;
   background-color: #edeef7;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -261,7 +267,7 @@ ul {
 }
 
 footer {
-  flex: 1 1 100%;
+  flex: 0;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -282,4 +288,33 @@ footer .links {
 footer .links a {
   margin-left: 18px;
   color: #3d3d3d;
+}
+
+@media (max-width: 768px) {
+  .page-wrapper {
+    padding: 0;
+  }
+
+  .image-wrapper {
+    display: none;
+  }
+
+  .form-wrapper {
+    width: 100%;
+  }
+
+  #api {
+    width: 100%;
+    padding: 24px;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  footer .links {
+    width: 100%;
+    margin-bottom: 24px;
+    /* flex-direction: column; */
+  }
 }
