--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,7 @@ button[type="submit"],
   font-size: 16px;
   font-weight: 500;
   order: 0;
+  position: relative;
 }
 
 .attrEntry input,
@@ -257,6 +258,7 @@ ul {
   margin-bottom: 16px;
   margin-left: 16px;
   flex: 1;
+  text-align: center;
 }
 
 .verify>button {
@@ -293,6 +295,10 @@ footer {
   width: 100%;
   margin-bottom: 36px;
   margin-top: 48px;
+  position: sticky;
+  max-width: 100vw;
+  right: 0;
+  left: 0;
 }
 
 footer .links {
