--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .image-wrapper {
@@ -63,14 +63,23 @@ a {
   overflow-wrap: break-word;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .form {
-  /* min-height: 600px; */
   width: 460px;
   background: #eee;
   border-radius: 4px;
   border: 1px solid #ddd;
   background: #fcfcfc;
   padding: 50px;
+  animation: fadeIn 200ms ease-in;
 }
 
 h2,
@@ -117,7 +126,6 @@ button[type="submit"],
 .divider,
 .intro,
 /* .entry .entry-item:first-of-type, */
-#forgotPassword,
 .create {
   display: none;
 }
