--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -297,23 +297,32 @@ ul {
 
 .verificationInfoText {
   color: #00B0B3;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
+}
+
+.verificationInfoText > div {
+  margin-bottom: 16px;
 }
 
 .verificationSuccessText {
   color: #11AB45;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
 }
 
+.verificationSuccessText > div {
+  margin-bottom: 16px;
+}
+
 .verificationErrorText {
   color: #E42121;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
+}
+
+.verificationErrorText > div {
+  margin-bottom: 16px;
 }
 
 footer {
