--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -67,6 +67,7 @@ a {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -156,8 +157,12 @@ button[type="submit"],
 .entry-item {
   display: flex;
   flex-direction: column;
-  margin-bottom: 16px;
   position: relative;
+}
+
+.attrEntry:not(:last-child),
+.entry-item:not(:last-child) {
+  margin-bottom: 16px;
 }
 
 .attrEntry>* {
@@ -301,7 +306,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationInfoText > div {
+.verificationInfoText>div {
   margin-bottom: 16px;
 }
 
@@ -311,7 +316,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationSuccessText > div {
+.verificationSuccessText>div {
   margin-bottom: 16px;
 }
 
@@ -321,7 +326,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationErrorText > div {
+.verificationErrorText>div {
   margin-bottom: 16px;
 }
 
@@ -405,4 +410,8 @@ h1 {
 
 #logo {
   height: 35px;
+}
+
+#attributeList>ul {
+  margin-top: 0;
 }
