padding and hide change email button

--- a/src/forgot/styles.css
+++ b/src/forgot/styles.css
@@ -10,6 +10,6 @@
   display: block;
 }
 
-#cancel {
-  display: none;
+#cancel, #emailVerificationControl_but_change_claims {
+  display: none !important;
 }
