--- a/src/forgot/styles.css
+++ b/src/forgot/styles.css
@@ -18,3 +18,13 @@
 #attributeList>ul>li:not(:last-child) {
   margin-bottom: 24px;
 }
+
+/* #ForgotPasswordExchange {
+  border: none;
+  color: #00B0B3;
+  display: inline;
+  font-size: 14px;
+  width: auto;
+  height: auto;
+  float: right;
+} */
