--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -126,7 +126,7 @@ button:disabled {
 }
 
 button[type="submit"],
-.sendButton {
+.verifyButton {
   background-color: black;
   color: white;
   border: 1px solid black;
@@ -315,6 +315,10 @@ ul {
   margin-bottom: 16px;
   order: 2;
   flex: 1 1 47%;
+}
+
+.verify>button.verifyButton {
+  order: 3;
 }
 
 .verificationInfoText {
